[package]
name = "mine-rs"
version = "0.0.1"
edition = "2021"
publish = false

[workspace]
members = [
    ".",
    "mclib/macros",
    "mclib/main",
    "mclib/protocol",
]

[workspace.dependencies]
mclib-macros = { path = "mclib/macros" }
mclib-protocol = { path = "mclib/protocol" }
mclib = { path = "mclib/main" }

darling = { version = "0.20.3" }
syn = { version = "2.0.39" }

[dependencies]
mclib = { workspace = true }
