[package]
name = "mine-rs"
description = "Minecraft server implementation"
version = "0.0.1"
edition = "2021"
authors = ["S. Suprun <hello@syoma.website>"]
publish = false

[dependencies]
mclib = { path = "mclib", version = "0.0.1" }

clap = { version = "4.4.8", features = ["derive", "env"] }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
