[package]
name = "mclib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mclib"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
mclib-macros = { workspace = true }
mclib-protocol = { workspace = true }
